# multicurrency-ms

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: exchange_rates.json  generate_test_data.py  refund_requests.json  transactions.json
src/: enums.py  exceptions.py  models.py
src/api/: app.py  dependencies.py  routes.py
src/audit/: __init__.py  audit_trail.py
src/batch/: __init__.py  batch_processor.py
src/exchange/: __init__.py  external_rate_provider.py  rate_comparator.py  rate_generator.py  rate_provider.py
src/notifications/: __init__.py  notifier.py
src/refund/: __init__.py  calculator.py  fee_calculator.py  policies.py  processor.py
src/storage/: __init__.py  repository.py
src/validation/: __init__.py  risk_detector.py  validator.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_audit/: test_audit_trail.py
tests/test_batch/: test_batch_processor.py
tests/test_exchange/: test_external_rate_provider.py  test_rate_comparator.py  test_rate_generator.py  test_rate_provider.py
tests/test_integration/: test_end_to_end.py
tests/test_refund/: test_calculator.py  test_fee_calculator.py  test_policies.py  test_processor.py
tests/test_validation/: test_risk_detector.py  test_validator.py
